test/corpus/comments/block.txt
================================================================================
Test
================================================================================
/*
before
*/
fn do_nothing() {
  /*
  inside
  */
  return 1;
}
/*
after
*/
--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (function_declaration
    (identifier)
    (compound_statement
      (block_comment)
      (return_statement
        (const_literal
          (int_literal)))))
  (block_comment))
